feat(auth): implemented RBAC for user only