@@ -3,10 +3,11 @@ package com.auth.service;
 import com.auth.entity.User;
 import com.auth.repository.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.*;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
+import java.util.List;
 
 @Service
 public class UserDetailsServiceImpl implements UserDetailsService {
@@ -25,7 +26,7 @@ public class UserDetailsServiceImpl implements UserDetailsService {
         return new org.springframework.security.core.userdetails.User(
                 user.getEmail(),
                 user.getPassword(),
-                Collections.emptyList() // ✅ Will use this for roles later
+                List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole().name())) // 👈 Adds ROLE_USER or ROLE_ADMIN
         );
     }
 }
